--- a/build.gradle
+++ b/build.gradle
@@ -48,15 +48,12 @@ tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
 }
 
-tasks.withType(Test) {
+test {
     useJUnitPlatform()
-    systemProperties(System.getProperties())
+}
 
-    testLogging {
-        lifecycle {
-//            events "started", "failed"
-            events "started", "skipped", "failed", "standard_error", "standard_out"
-            exceptionFormat "short"
+task remote_test(type: Test) {
+        useJUnitPlatform {
+            includeTags("remote")
         }
-    }
 }
