--- a/build.gradle
+++ b/build.gradle
@@ -52,6 +52,12 @@ test {
     useJUnitPlatform()
 }
 
+task simple_test(type: Test) {
+    useJUnitPlatform {
+        includeTags("simple")
+    }
+}
+
 task remote_test(type: Test) {
         useJUnitPlatform {
             includeTags("remote")
